@@ -10,7 +10,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.apache.pdfbox.multipdf.PDFMergerUtility;
 import org.apache.pdfbox.pdmodel.PDDocument;
@@ -165,7 +164,7 @@ public class MergeController {
                     List<PDField> fieldsToRemove =
                             acroForm.getFields().stream()
                                     .filter(field -> field instanceof PDSignatureField)
-                                    .collect(Collectors.toList());
+                                    .toList();
 
                     if (!fieldsToRemove.isEmpty()) {
                         acroForm.flatten(
