@@ -10,8 +10,8 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
+import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -56,14 +56,17 @@ public class AccountWebController {
     private final SessionPersistentRegistry sessionPersistentRegistry;
     // Assuming you have a repository for user operations
     private final UserRepository userRepository;
+    private final boolean runningEE;
 
     public AccountWebController(
             ApplicationProperties applicationProperties,
             SessionPersistentRegistry sessionPersistentRegistry,
-            UserRepository userRepository) {
+            UserRepository userRepository,
+            @Qualifier("runningEE") boolean runningEE) {
         this.applicationProperties = applicationProperties;
         this.sessionPersistentRegistry = sessionPersistentRegistry;
         this.userRepository = userRepository;
+        this.runningEE = runningEE;
     }
 
     @GetMapping("/login")
@@ -197,6 +200,9 @@ public class AccountWebController {
     @PreAuthorize("hasRole('ROLE_ADMIN')")
     @GetMapping("/usage")
     public String showUsage() {
+        if (!runningEE) {
+            return "error";
+        }
         return "usage";
     }
 
@@ -279,7 +285,7 @@ public class AccountWebController {
                                         return u2LastRequest.compareTo(u1LastRequest);
                                     }
                                 })
-                        .collect(Collectors.toList());
+                        .toList();
         String messageType = request.getParameter("messageType");
 
         String deleteMessage;
@@ -325,7 +331,7 @@ public class AccountWebController {
         model.addAttribute("activeUsers", activeUsers);
         model.addAttribute("disabledUsers", disabledUsers);
 
-        model.addAttribute("maxEnterpriseUsers", applicationProperties.getPremium().getMaxUsers());
+        model.addAttribute("maxPaidUsers", applicationProperties.getPremium().getMaxUsers());
         return "adminSettings";
     }
 
