@@ -3,7 +3,6 @@ package stirling.software.SPDF.controller.web;
 import java.time.Duration;
 import java.time.LocalDateTime;
 import java.util.*;
-import java.util.stream.Collectors;
 
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -287,7 +286,7 @@ public class MetricsController {
         return counts.entrySet().stream()
                 .map(entry -> new EndpointCount(entry.getKey(), entry.getValue()))
                 .sorted(Comparator.comparing(EndpointCount::getCount).reversed())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private double getUniqueUserCount(String method, Optional<String> endpoint) {
@@ -349,7 +348,7 @@ public class MetricsController {
         return uniqueUsers.entrySet().stream()
                 .map(entry -> new EndpointCount(entry.getKey(), entry.getValue().size()))
                 .sorted(Comparator.comparing(EndpointCount::getCount).reversed())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @GetMapping("/uptime")
